--- a/web/css/index.css
+++ b/web/css/index.css
@@ -47,8 +47,8 @@ td.call, td.put {
 }
 
 .lineRef {
-    stroke: gray;
-    stroke-width: 1px;
+    stroke: rgba(0, 0, 0, 0.35);
+    stroke-width: 2px;
     fill: none;
 }
 
